# macos-window-info

./: README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  code-quality.yml  publish.yml
src/find_macos_window_pid/: find-macos-window-pid.py
src/macos-window-info/: find-macos-window-pid.py
tests/: test_main.py
