[project]
name = "find-macos-window-pid"
version = "0.1.0"
description = ""
authors = [
    {name = "Bernardo Martins",email = "bemartins@citco.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
